--- a/shortener/main/templates/main/index.html
+++ b/shortener/main/templates/main/index.html
@@ -4,17 +4,19 @@
     <h1>URL Shortener</h1>
 
     {% if message %}
-        <p>{{message}}</p>
+        <p id="message">{{message}}</p>
     {% endif %}
 
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="Shorten">
+        <div id="button-base">
+            <input type="submit" value="Shorten">
+        </div>
     </form>
 
     {% if link %}
-        <a href="{{ link }}">{{link}}</a>
+        <p id="short-url-p">Your short url is: <a href="{{ link }}">{{ link|slice:"7:" }}</a></p>
     {% endif %}
 
 {% endblock content %}
